--- a/src/components/Post/post.scss
+++ b/src/components/Post/post.scss
@@ -1,82 +1,77 @@
 @import "../../style.scss";
 
+.post {
+  @include themify($themes) {
+    border-radius: 20px;
+    box-shadow: 0 0 25px -10px rgba(0, 0, 0, 1);
+    background: themed("bg");
+    color: themed("textColor");
+    width: 98%;
 
-.post{
-  
-  @include themify($themes){
-  border-radius: 20px;
-  box-shadow: 0 0 25px -10px rgba(0,0,0,1.0);
-  background: themed("bg");
-  color: themed("textColor");
-  width: 98%;
+    .container {
+      padding: 20px;
 
-
-  .container {
-    padding: 20px;
-
-    .user { 
+      .user {
         display: flex;
         align-items: center;
-         justify-content: space-between;
+        justify-content: space-between;
 
-         .userInfo {
+        .userInfo {
+          display: flex;
+          gap: 20px;
+
+          img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+          .details {
             display: flex;
-            gap: 20px;
+            flex-direction: column;
 
-            img{
-                width: 40px;
-                height: 40px;
-                border-radius: 50%; 
-                object-fit: cover;
+            .name {
+              font-weight: 500;
             }
-            .details{
-             display: flex;
-             flex-direction: column;
-
-             .name {
-                font-weight: 500;
-             }
-             .date {
-                font-size: 12px;
-             }
+            .date {
+              font-size: 12px;
             }
-         }
-    }
+          }
+        }
+      }
 
-  .content {
-    margin: 20px 0;
-    
-    img {
-         width: 100%;
-         max-height: 500px;
-         object-fit: cover;
-         margin-top: 20px;
-    }
-  }
+      .content {
+        margin: 20px 0;
 
-  .info {
-    display: flex; 
-    align-items: center;
-    gap: 20px;
+        img {
+          width: 100%;
+          max-height: 500px;
+          object-fit: cover;
+          margin-top: 20px;
+        }
+      }
 
-    @include mobile {
-      // padding: 20px;
-    }
-
-    .item {
+      .info {
         display: flex;
         align-items: center;
-        gap: 20px; 
-        cursor: pointer;
-        font-size: 16px;
-
+        gap: 20px;
 
         @include mobile {
-          flex-direction: column;
+          // padding: 20px;
+        }
+
+        .item {
+          display: flex;
+          align-items: center;
+          gap: 20px;
+          cursor: pointer;
+          font-size: 16px;
+
+          @include mobile {
+            flex-direction: column;
+          }
         }
       }
     }
   }
-
- }
 }
